--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Bus Stop</title>
+    <title>Bus Schedule</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-    <div id="stopInfo" style="width:20em">
-        <div>
-            <label for="stopId">Stop ID: </label>
-            <input id="stopId" type="text">
-            <input id="submit" type="button" value="Check" onclick="getInfo()"></div>
-        <div id="result">
-            <div id="stopName"></div>
-            <ul id="buses"></ul>
+    <div id="schedule">
+        <div id="info"><span class="info">Not Connected</span></div>
+        <div id="controls">
+            <input id="depart" value="Depart" type="button" onclick="result.depart()">
+            <input id="arrive" value="Arrive" type="button" onclick="result.arrive()" disabled="true">
         </div>
     </div>
     <script src="./app.js"></script>
